portail_d4c/css/style.css
/* ... */
  
  @font-face {
    font-family: DroidSansBold;
    src:  url('../fonts/DroidSans-Bold-webfont.eot?') format("eot"),
          url('../fonts/DroidSans-Bold-webfont.woff') format("woff"),
          url('../fonts/DroidSans-Bold-webfont.ttf') format("truetype"),
          url('../fonts/DroidSans-Bold-webfont.svg#OpenSans-Semibold') format("svg");
  }
  
  .page-header {
      color: #007ABC;
      margin: auto;
      width: 100%;
      margin-top: 40px;
      font-family: "Open Sans",serif;
      text-align: center;
      font-size: 30px;
      padding-top: 20px;
  }
  
  /***********************************************************/
  
  #main .form-group {
      padding-right: 10px;
  }
  
  #main.widget-opendata
  {
      margin-top: 20px;
      position: relative;
      display: inline-block;
      width: 100%;
      overflow-x: hidden;
      padding: 10px;
  }
  #main.widget-opendata #search{
      padding: 50px 0;
      background-color: #007ABC;
      color: white;
      margin-bottom: 20px;
  }
  #main.widget-opendata #datasets
  {
      display: flex;
      flex-direction: row;
      flex-wrap: wrap;
  }
      
  #main.widget-opendata #datasets h2
  {
      color: #06504F ;/*#007ABC;*/
      margin-top: 2px;
      cursor: pointer;
      font-size : 20px;
  }
  #main.widget-opendata #reuses h2
  {
      color: #06504F ;
      margin-top: 5px;
      font-size : 20px;
  }
  #main.widget-opendata #datasets p
  {
      font-size : 10px;
  }
  #main.widget-opendata .dataset
  {
      margin-bottom: 1%;
      padding-left: 10px;
      height: auto;
      display: inline-block;
      /*max-height: 250px;*/
      /*overflow : hidden;*/
      /*transition: border 1s ease;*/
      border-radius: 3px;
      border : 1px solid black;
      background-color: white;
      width: 49%;
      margin-left : 1%;
  }
  
  #main.widget-opendata .dataset:hover
  {
      border-left : 3px solid #e42529;
      padding-left: 8px;
  }
  
  #main.widget-opendata #pagination
  {
      width : 100%;
      text-align: center;
  }
  
  #main.widget-opendata #pagination .pagination
  {
      margin-top: 20px;
      margin-bottom: 20px;
      width: auto;
  
  }
  #main.widget-opendata .hide
  {
      display : none;
  }
  #main.widget-opendata .dataset p
  {
      color: #070606;
  }
  #main.widget-opendata .dataset ul
  {
      margin: 0;
      padding: 8px 10px;
      display: flex;
      align-items: center;
      justify-content: center;
      gap: 5px;
  }
  #main.widget-opendata ul
  {
      list-style: none;
      font-size : 13px;
  }
  #main.widget-opendata .dataset li
  {
      display: inline-block;
  }
  #main.widget-opendata .dataset h2:hover{
      text-decoration: underline;
  }
  #main.widget-opendata .infos
  {
      font-size: 14px;
  }
  #main.widget-opendata .titre
  {
      color: black;
      font-weight: bold;
  }
  #main.widget-opendata .info
  {
      float: right;
      margin-right: 3%;
  }
  #main.widget-opendata .jetons li
  {
      background-color: rgb(var(--bouton));
      font-family: DroidSans, "Open Sans", Arial, sans-serif;
      color: white;
      border: solid 1px rgb(var(--bouton));
      border-radius: 6px;
      padding: 1px 4px;
      font-size: 0.85em; /*10px;*/
      display: inline-block;
  }
  
  /**************** widget *************/
  #main.widget-opendata #tags li
  {
      background-color: rgba(35,135,171,0.7);
      color: white;
      border: solid 1px rgba(35,135,171,0.7);
      border-radius: 5px;
      padding: 2px 4px 2px 4px;
      font-size: 12px;
      margin-right: 5px;
      margin-bottom: 5px;
  }
  #main.widget-opendata #tags .clicked
  {
      border: solid 1px rgba(35,135,171,1);
      background-color: rgba(35,135,171,1);
  }
  
  #main.widget-opendata .tag:hover
  {
      cursor: pointer;
  }
  #main.widget-opendata .tag
  {
      white-space: nowrap;
      display: inline-block;
  }
  #main.widget-opendata #jeuxDeDonnes
  {
      background-color: rgb(35,135,171);
      color: white;
      margin-top: 0px;
      padding: 5px 5px 5px 5px;
  }
   /************ widget ***************/
  
  
  #main.widget-opendata .format
  {
      background-color: black;
      border-radius: 5px;
      padding: 2px 4px;
      margin-right: 5px;
      display: inline-block;
      font-size: 10px;
      font-weight: bold;
      line-height: 14px;
      color: rgb(255, 255, 255);
      vertical-align: baseline;
      white-space: nowrap;
      text-shadow: rgba(0, 0, 0, 0.25) 0px -1px 0px;
  }
  #main.widget-opendata #filter .jetons
  {
          padding-left: 0px;
          margin-top: 10px;
  }
  #main.widget-opendata filter .jetons li
  {
      display: inline;
  }
  #main.widget-opendata #filter
  {
      padding-bottom: 15px;
      padding-left: 0px;
      padding-right: 0px;
      margin-bottom: 2%;
      border-radius: 3px;
      padding-left: 10px;
  }
  #main.widget-opendata #filter h1
  {
      background-color: #575656;
      color: white;
      margin-top: 0px;
      padding: 5px 5px 5px 5px;
      border-radius : 3px;
  }
  #main .form-control{
      font-size: 0.85em !important;
      
  }
  #main.widget-opendata #filter h2 #reset-filters
  {
      color : white;
      float : right;
      font-size : 0.8em;
      font-family: DroidSans, "Open Sans", Arial, sans-serif;
      font-weight: 600;
      position : absolute;
      bottom : 5px;
      right : 5px;
  }
  .navbar-default+div>div{
      margin-right: -15px !important; 
      margin-left: -15px!important; 
  }
  
  #main.widget-opendata #filter h2 #reset-filters:hover
  {
      cursor : pointer;
      color : #ffc9a2;
  }
  
  #main.widget-opendata #filter h2
  {
      color: white;
      background-color: #575656;
      padding: 5px 5px 5px 5px;
      border-radius : 3px;
      position : relative;
  }
  
  #main.widget-opendata h2 img
  {
      height: 8%;
      width: 8%;
      padding-bottom: 2px;
  }
/* ... */

